# Server

./: CMakeLists.txt  main.cpp
MessageQueue/: IMessageQueue.h  MessageQueue.cpp  MessageQueue.h
Protocol/: Commands.h  Parser.cpp  Parser.h
Users/: UserManager.cpp  UserManager.h
